[package]
name = "permguard-sdk"
version = "1.0.0"
edition = "2024"
keywords = ["permguarg", "auth"]
categories = ["development-tools"]
homepage = "www.permguard.com"
license = "Apache-2.0"
repository = "https://github.com/permguard/sdk-rust"

[lib]
name = "permguard"
crate-type = ["lib"]  # could also include "cdylib", "rlib", etc.

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
prost-types = "0.14.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "*"
