[package]
name = "permguard-sdk"
version = "1.0.1"
edition = "2024"
keywords = ["permguard", "auth"]
categories = ["development-tools"]
homepage = "https://www.permguard.com"
license = "Apache-2.0"
repository = "https://github.com/permguard/sdk-rust"
description = "Permguard SDK for Rust"

[lib]
name = "permguard"
crate-type = ["lib"]  # could also include "cdylib", "rlib", etc.

[dependencies]
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"
prost-types = "0.14.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
